--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -2,11 +2,30 @@ app.title=\u041F\u043E\u0434\u0441\u0447\u0435\u0442 \u043A\u0430\u043B\u043E\u0
 app.home=\u0413\u043B\u0430\u0432\u043D\u0430\u044F
 app.footer=\u041F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u0438\u0435 \u043F\u043E \u043F\u0440\u043E\u0435\u043A\u0442\u0443 <a href\="https\://github.com/JavaOPs/topjava" target\=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a>
 app.login=\u0417\u0430\u0439\u0442\u0438 \u043A\u0430\u043A
+
 users.title=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
 users.name=\u0418\u043C\u044F
 users.email=\u041F\u043E\u0447\u0442\u0430
 users.roles=\u0420\u043E\u043B\u0438
 users.active=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0439
 users.registered=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D
+
 meals.title=\u041C\u043E\u044F \u0435\u0434\u0430
+meals.fromdate=\u041E\u0442 \u0434\u0430\u0442\u044B
+meals.fromtime=\u041E\u0442 \u0432\u0440\u0435\u043C\u0435\u043D\u0438
+meals.todate=\u0414\u043E \u0434\u0430\u0442\u044B
+meals.totime=\u0414\u043E \u0432\u0440\u0435\u043C\u0435\u043D\u0438
+meals.filter=\u0424\u0438\u043B\u044C\u0442\u0440
+meals.addmeal=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C
+meals.update=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
+meals.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
+
+meal.save=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+meal.cancel=\u041E\u0442\u043C\u0435\u043D\u0430
+meal.titlecreate=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0435\u0434\u044B
+meal.titleupdate=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0435\u0434\u044B
+
 common.select=\u0412\u044B\u0431\u0440\u0430\u0442\u044C
+common.datetime=\u0414\u0430\u0442\u0430 \u0438 \u0432\u0440\u0435\u043C\u044F
+common.description=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+common.calories=\u041A\u0430\u043B\u043E\u0440\u0438\u0438
